# lightweight-game-engine

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Lightweight Game Engine.sln  README.md  docker.env.example  notes
Code/: LGE_ComponentType.h  LGE_Components.cpp  LGE_Components.h  LGE_DebugDraw.cpp  LGE_DebugDraw.h  LGE_Entity.cpp  LGE_Entity.h  LGE_EntityContact.cpp  LGE_EntityContact.h  LGE_EntityType.h  LGE_GameWindow.cpp  LGE_GameWindow.h  LGE_InputOutput.h  LGE_PhysicsComponent.cpp  LGE_PhysicsComponent.h  LGE_PlayerMovementHandler.cpp  LGE_PositionComponent.cpp  LGE_PositionComponent.h  LGE_RenderWindow.cpp  LGE_RenderWindow.h  LGE_SpriteComponent.cpp  LGE_SpriteComponent.h  LGE_SpritePhysicsHandler.cpp  LGE_SpritePhysicsHandler.h  LGE_TextureManager.cpp  LGE_TextureManager.h  Lightweight Game Engine.vcxproj  Lightweight Game Engine.vcxproj.filters  Main.cpp
Documentation/: gantt.ods
docs/: game engine plans.odt
src/: CMakeLists.txt  config.cpp  log.h  main.cpp  vcpkg.json
src/IO/: CMakeLists.txt  consts.h  io_manager.cpp  io_manager.h
src/LGE/: CMakeLists.txt  LGE_GameWindow.cpp  LGE_GameWindow.h  LGE_InputOutput.h  LGE_RenderWindow.cpp  LGE_RenderWindow.h
src/audio/: CMakeLists.txt  audio_component.cpp  audio_component.h
src/audio_manager/: CMakeLists.txt  audio_manager.cpp  audio_manager.h  music_player.cpp  music_player.h  sfx_player.cpp  sfx_player.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/common/: CMakeLists.txt
src/common/message_bus/: CMakeLists.txt  bus.cpp  message.cpp  message.h  node.cpp  node.h
src/component/: CMakeLists.txt  component.cpp  component.h  component_type.h
src/debug_draw/: CMakeLists.txt  debug_draw.cpp  debug_draw.h
src/entity/: CMakeLists.txt  builder.cpp  builder.h  entity.cpp  entity.h  entity_contact.cpp  entity_contact.h  entity_type.h  factory.cpp  factory.h
src/game_loop/: CMakeLists.txt  game_loop.cpp  game_loop.h
src/game_window/: CMakeLists.txt  game_window.cpp  game_window.h
src/level/: CMakeLists.txt  level.cpp  level.h  level_builder.cpp  level_builder.h  levels.cpp  levels.h  manager.cpp  manager.h
src/message_bus/: CMakeLists.txt  bus.cpp  bus.h  message.cpp  message.h  message_event.h  node.cpp  node.h
src/physics/: CMakeLists.txt  physics_component.cpp  physics_component.h
src/position/: CMakeLists.txt  position_component.cpp  position_component.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/sprite/: CMakeLists.txt  sprite_component.cpp  sprite_component.h  sprite_physics.cpp  sprite_physics.h
src/static/levels/: level1.json
src/texture_manager/: CMakeLists.txt  texture_manager.cpp  texture_manager.h
